2011-09-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Test for PQescapeIdentifier.
2011-09-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Make timeval initializers compatible with more platforms.
2011-09-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/Makefile.am:
 - Renamed test_except.cxx to test_exceptions.cxx.
 test/unit/test_notification.cxx:
 - Clearer comment.
2011-08-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_exceptions.cxx:
 - New
 - Tests pqxx_exception downcast example given in except.hxx.
2011-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Use reinterpret_cast for void* downcast, thanks Kirit Saelensminde.
2011-07-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
 - Removed string conversion template to char[].  Fixes #215.  Thanks oobermick.
 src/utils.cxx:
 - Fixed #ifdefs around strerror_r workarounds, thanks Kirit Saelensminde.
 tools/Makefile.am:
 - Distribute tools/lint.
2011-07-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 Makefile.am:
 - Refer to lint as tools/lint, not ./tools/lint.  Server tests breaking.
2011-07-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint:
 - New.  Routine sanity checks on the source tree.
 test/test_main.hxx:
 - Failure summary.
 tools/pre-release-check:
 - New.  Part of release process re-tooling.
2011-07-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/notification.cxx:
 - Fixed workaround for VC++, which can't handle console output in destructors.
 - Thanks Kirit Saelensminde.
2011-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Support "inf" as representation of infinity (C++0x standard?).
 test/test000.cxx:
 - Broke because 0.0 isn't always represented as "0"; loosened test.
 test/test_helpers.cxx:
 - Added "less than" assertion.
 test/unit/test_float.cxx:
 - Don't ==-compare FP values; may elicit warnings even for infinity.
2011-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>